--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
-  <head>
-  </head>
-  <body>
-    <ul>
-      <li><a href="outputs/my_ml_papers_150823.html">My top ML Papers - 15 Aug. 23</a></li>
-    </ul>
-  </body>
+<head>
+</head>
+<body>
+<ul>
+<li></li><li><a href="outputs/daily/my_ml_papers_150823.html">My top ML papers - Tue 15 Aug 23</a></li>
+</ul>
+</body>
 </html>
