--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
 <head>
+<!-- Optional theme -->
 </head>
 <body>
+  <div>
+  <h>LLM Papers</h>
 <ul>
-<li></li><li><a href="outputs/daily/my_ml_papers_150823.html">My top ML papers - Tue 15 Aug 23</a></li><li><a href="outputs/daily/my_ml_papers_150823.html">My top ML papers - Tue 15 Aug 23</a></li>
+<li><a href="outputs/daily/my_ml_papers_150823.html">My top ML papers - Tue 15 Aug 23</a></li>
 </ul>
+</div>
 </body>
 </html>
